--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,23 @@
+*{
+  margin: 0;
+  padding: 0;
+}
+
 .App {
   text-align: center;
   font-family: arial;
+  height: 100dvh;
+  width: 100dvw;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
 }
 
+body{
+  background-color: #88d0cc;
+  
+}
 .Menu {
   width: 500px;
   height: 500px;
@@ -16,6 +27,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 }
 
 .Menu input, button {
@@ -25,6 +37,7 @@
   border: none;
   border-radius: 5px;
   font-size: 20px;
+  
 }
 
 button:hover {
@@ -40,6 +53,7 @@ button:hover {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  
 }
 
 .Menu, .Quiz, .EndScreen h1 {
